# buckyos

.github/workflows/: build-all.yml  build-windows.yml
demo/: Cargo.toml
demo/node_daemon/src/: main.rs
src/: Cargo.toml
src/apps/tray-controller/: Cargo.toml  tauri.conf.json
src/apps/tray-controller/src/: ffi_extern.rs  lib.rs  main.rs
src/component/kLog/: Cargo.toml
src/component/kLog-iter/: Cargo.toml
src/component/kLog/logger/: Cargo.toml
src/component/kLog/logger/src/: inner_types.rs  system_log.rs  system_log_file.rs  types.rs
src/component/kLog/src/: inner_types.rs  lib.rs  log_http.rs  main.rs  system_log.rs  system_log_file.rs
src/components/backup-lib/: Cargo.toml
src/components/backup-lib/src/: dir_obj.rs  lib.rs  rpc_protocol.rs
src/components/backup-service/: Cargo.toml
src/components/backup-service/src/: backup_server.rs  main.rs
src/components/ndn-lib/: Cargo.toml
src/components/ndn-lib/src/: object.rs
src/components/ndn-lib/src/chunk/: builder.rs  chunk.rs
src/components/ndn-lib/src/trie_object_map/: object_map.rs
src/components/ndn-lib/tests/: local_signal_ndn_mgr_chunklist.rs  local_signal_ndn_mgr_dir_obj_map.rs  local_signal_ndn_mgr_file_chunklist.rs  local_signal_ndn_mgr_obj_map.rs  local_signal_ndn_mgr_trie_obj_map.rs  ndn_2_zone_file_api.rs  ndn_2_zone_test_chunk.rs  ndn_2_zone_test_obj.rs  trie.md
src/components/ndn-lib/tests/dir/: dir_object.rs  dir_object_builder.rs
src/kernel/node_daemon/: Cargo.toml
