[package]
name = "tray-controller"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0" }

[dependencies]
lazy_static = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
sysinfo = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
jsonwebtoken = "*"  
buckyos-kit = { path = "../../components/buckyos-kit" }
name-lib = { path = "../../components/name-lib" }
name-client = {path = "../../components/name-client"}
package-lib = {path = "../../components/package-lib"}
buckyos-api = { path = "../../kernel/buckyos-api" }
kRPC = { path = "../../kernel/kRPC" }
fs2 = "*"
tauri = { version = "2.5.0" , features = ["tray-icon", "image-ico"]}
tauri-plugin-log = "2.4.0"
# tauri_plugin_dialog = "2.2.1"
webbrowser = "1.0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "*", features = ["Win32_System_Services", "Win32_UI", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[package.metadata.windows]
subsystem = "windows"