[package]
name = "kLog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
chrono = "0.4"
async-std = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
regex = "1.5.4"
walkdir = "2.3.2"
tide = "0.16.0"
reqwest = "0.12.3"
futures = "0.3.30"